--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,66 @@
-$primary-color: purple;
+@import "config";
+* {
+  box-sizing: border-box;
+}
 
 body {
+  @include background;
   background: $primary-color;
+  color: white;
+  margin: 0px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;
+  line-height: 1.5;
+}
+//Headings
+h1,
+h2,
+h3 {
+  font-weight: 400;
+  margin: 0;
+  &.lg-heading {
+    font-size: 4rem;
+  }
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 3), 0.5);
+  }
+}
+header {
+  z-index: 2;
+  position: fixed;
+  width: 100%;
+}
+
+//links
+a {
+  text-decoration: none;
+  color: white;
+}
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 1rem;
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 15vh;
+    }
+  }
 }
