--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -26,8 +26,104 @@
 
       //line 3
       &:nth-child(3) {
-        transform: rotate(315deg) translate(7px, -6px);
+        transform: rotate(-45deg) translate(7px, -6px);
       }
     }
+  }
+}
+//menu overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  &-nav {
+    opacity: 0.9;
+    list-style: none;
+    font-weight: 400;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3rem;
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-branding {
+    background: $primary-color;
+    @include easeOut;
+    transform: translate3d(0, 100%, 0);
+    //slide in from botton
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      img {
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        border: solid 3px $secondary-color;
+      }
+
+      //   background: url(../images/portrait.jpg);
+    }
+  }
+}
+.nav-item {
+  transform: translate3d(600px, 0, 0);
+  @include easeOut;
+
+  &.show {
+    // Slide in from right
+    transform: translate3d(0, 0, 0);
+  }
+
+  &.current > a {
+    color: $secondary-color;
+  }
+}
+
+.nav-link {
+  display: inline-block;
+  position: relative;
+  font-size: 30px;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  font-weight: 300;
+  color: set-text-color($primary-color);
+  text-decoration: none;
+  @include easeOut;
+
+  &:hover {
+    color: $secondary-color;
+  }
+}
+
+// Delay each nav item slide by 0.1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
   }
 }
