--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,17 @@
       width: 135px;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
 }
 //Phone
 @include mediaSm {
