--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,9 @@
       "job3";
     grid-template-columns: 1fr;
     justify-content: center;
+    .job {
+      text-align: left;
+    }
   }
 }
 //Phone
