--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,8 +1,14 @@
 //Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 //Desktops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 //Tablets
 @include mediaMd {
@@ -51,10 +57,16 @@
       text-align: left;
     }
   }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 //Phone
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
